Fixed missing margins between project detail images

--- a/css/website.css
+++ b/css/website.css
@@ -232,4 +232,5 @@ a.active {
 
 .project-details img {
   max-width: 100%;
+  margin: 2rem;
 }
